# CodeMap

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENT_INFRASTRUCTURE.md  CLAUDE.md  CLOUDFRONT_HTTPS_TESTING.md  DEPLOYMENT_OPERATIONS_SUMMARY.md  DEVELOPMENT_PLAN.md  LICENSE  PROJECT_BRIEF.md  README.md  install.js  package.json  pyproject.toml
.claude/agents/: codemap-devops.md  codemap-executor.md  codemap-mcp.md  codemap-verifier.md
.github/workflows/: ci.yml  deploy.yml
codemap/: __init__.py  cli.py  config.py  logging_config.py
codemap/analyzer/: __init__.py  ast_visitor.py  graph.py  impact.py  pyan_wrapper.py  symbols.py
codemap/api/: __init__.py  jobs.py  main.py  models.py  routes.py  storage.py  storage_s3.py
codemap/hooks/: __init__.py
codemap/output/: __init__.py  architecture.py  code_map.py  devplan_parser.py  drift_report.py  linker.py  mermaid.py  schemas.py
deploy/: PRODUCTION_CHECKLIST.md  README.md  backup-to-s3.sh  cloudfront-policy.json  cloudfront-setup.md  cloudwatch-alarms.md  codemap.env.example  codemap.service  deploy-remote.sh  ec2-setup.sh  install-service.sh  s3-setup.md
examples/: DRIFT_REPORT.md  function_diagram.mermaid  impact_diagram.mermaid  module_diagram.mermaid
examples/demo_project/: DEVELOPMENT_PLAN.md  app.py  auth.py
local-mcp/: README.md  package-lock.json  package.json
local-mcp/src/: analyzer.test.ts  analyzer.ts  cli.ts  index.ts  mcp-server.ts  (+4 more)
mcp-server/: .dev.vars  .dev.vars.example  .gitignore  PROJECT_BRIEF.md  README.md  package-lock.json  package.json  tsconfig.json  vitest.config.ts  wrangler.toml
schemas/: code_map.schema.json
tests/: __init__.py  test_cli.py  test_cli_analyze.py  test_cli_drift.py  test_cli_graph.py  test_cli_hooks.py  test_cli_impact.py  test_cli_sync.py  test_config.py  test_logging.py
vscode-extension/: PROJECT_BRIEF.md
(+70 files in other folders)
